changed to maintain v(terminal)=0

--- a/Intro to RL solutions.ipynb
+++ b/Intro to RL solutions.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 0 finished after 14 timesteps\n",
+      "Episode 1 finished after 45 timesteps\n",
+      "Episode 2 finished after 94 timesteps\n"
+     ]
+    }
+   ],
    "source": [
     "visualise_agent(random_policy)"
    ]
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,6 +374,7 @@
     "    for s in range(num_states): # for each state\n",
     "        value_table[s] = np.random.rand()\n",
     "#         value_table[s] = 0\n",
+    "    value_table[15] = 0\n",
     "    return value_table\n",
     "\n",
     "# def initialise_policy(num_states=16, num_actions=4):\n",
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,14 +405,14 @@
     "def policy_evaluation(policy, value_table, discount_factor, error_threshold=0.01, num_states=16):\n",
     "    print()\n",
     "    print(value_table)\n",
-    "    new_value_table = {} # init new value table to be filled in and returned\n",
+    "    new_value_table = value_table # init new value table to be filled in and returned\n",
     "    converged = False # initially we have not found a converged value function for this policy\n",
     "    k = 0 # sweep index\n",
     "    while not converged: # until the value function converges\n",
     "        print('sweep ', k)\n",
     "        k += 1 # increment sweep counter\n",
     "        worst_delta = 0 # difference between previous values and iterated values\n",
-    "        for state in range(num_states): # loop over each state\n",
+    "        for state in range(num_states - 1): # loop over each state\n",
     "            action = policy[state] # get the action according to current policy\n",
     "            new_state, reward = transition(state, action) # use model to simulate next state and reward\n",
     "            new_val = reward + discount_factor * value_table[new_state] # compute new value\n",
@@ -423,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,11 +467,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating policy  0\n",
+      "\n",
+      "{0: 0.29844189511704555, 1: 0.9912310349803479, 2: 0.15560191906225662, 3: 0.17064166354619303, 4: 0.2790072148801136, 5: 0.09656412271163739, 6: 0.9399375202704942, 7: 0.1192623808176747, 8: 0.8584953424281495, 9: 0.10309601521166523, 10: 0.25362027132288856, 11: 0.5576366627335845, 12: 0.2916411187144816, 13: 0.3634704916905698, 14: 0.003473453289684625, 15: 0}\n",
+      "sweep  0\n",
+      "Converged on value function\n",
+      "Iterating policy  0\n",
+      "Evaluating policy  0\n",
+      "\n",
+      "{0: 0.268597705605341, 1: 0.8921079314823132, 2: 0.8028971383340818, 3: 0.7226074245006736, 4: 0.08690771044047366, 5: 0.8028971383340818, 6: 0.10733614273590723, 7: 0.6503466820506063, 8: 0.0782169393964263, 9: 0.07039524545678366, 10: 0.0031261079607161624, 11: 0.002813497164644546, 12: 0.3271234425215128, 13: 0.06335572091110529, 14: 1.0, 15: 0}\n",
+      "sweep  0\n",
+      "Converged on value function\n",
+      "Iterating policy  0\n",
+      "Evaluating policy  0\n",
+      "\n",
+      "{0: 0.8028971383340818, 1: 0.8028971383340818, 2: 0.7226074245006736, 3: 0.6503466820506063, 4: 0.7226074245006736, 5: 0.7226074245006736, 6: 0.6503466820506063, 7: 0.5853120138455457, 8: 0.29441109826936157, 9: 0.6503466820506063, 10: 0.9, 11: 1.0, 12: 0.29441109826936157, 13: 0.9, 14: 1.0, 15: 0}\n",
+      "sweep  0\n",
+      "Converged on value function\n",
+      "Iterating policy  0\n",
+      "Evaluating policy  0\n",
+      "\n",
+      "{0: 0.7226074245006736, 1: 0.6503466820506063, 2: 0.5853120138455457, 3: 0.5267808124609911, 4: 0.6503466820506063, 5: 0.5853120138455457, 6: 0.81, 7: 0.9, 8: 0.5853120138455457, 9: 0.81, 10: 0.9, 11: 1.0, 12: 0.81, 13: 0.9, 14: 1.0, 15: 0}\n",
+      "sweep  0\n",
+      "Converged on value function\n",
+      "Iterating policy  0\n",
+      "Evaluating policy  0\n",
+      "\n",
+      "{0: 0.6503466820506063, 1: 0.5853120138455457, 2: 0.7290000000000001, 3: 0.81, 4: 0.5853120138455457, 5: 0.7290000000000001, 6: 0.81, 7: 0.9, 8: 0.7290000000000001, 9: 0.81, 10: 0.9, 11: 1.0, 12: 0.81, 13: 0.9, 14: 1.0, 15: 0}\n",
+      "sweep  0\n",
+      "Converged on value function\n",
+      "Iterating policy  0\n",
+      "Evaluating policy  0\n",
+      "\n",
+      "{0: 0.5853120138455457, 1: 0.6561000000000001, 2: 0.7290000000000001, 3: 0.81, 4: 0.6561000000000001, 5: 0.7290000000000001, 6: 0.81, 7: 0.9, 8: 0.7290000000000001, 9: 0.81, 10: 0.9, 11: 1.0, 12: 0.81, 13: 0.9, 14: 1.0, 15: 0}\n",
+      "sweep  0\n",
+      "Converged on value function\n",
+      "Iterating policy  0\n",
+      "Policy now stable - optimal policy found\n",
+      "Optimal policy: {0: 1, 1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 1, 7: 1, 8: 1, 9: 1, 10: 1, 11: 1, 12: 2, 13: 2, 14: 2, 15: 1}\n"
+     ]
+    }
+   ],
    "source": [
     "# POLICY ITERATION ALGORITHM\n",
     "def policy_iteration(discount_factor=0.9):\n",
