--- a/Upside Down RL.ipynb
+++ b/Upside Down RL.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This file is for testing radical changes to the codebase. Upside Down Reinforcement Learning.py is the working version."
+    "## What is ⅂ᴚ?\n",
+    "\n",
+    "So far, we have modelled the policy, value and q functions. In this session, we will be using an approach to RL called Upside Down RL where we model the behaviour function.\n",
+    "\n",
+    "This was outlined in Schmidhuber's December 2019 paper [Reinforcement Learning Upside Down:\n",
+    "Don’t Predict Rewards - Just Map Them to Actions](https://arxiv.org/pdf/1912.02875.pdf). <br>\n",
+    "The specific implementation we are following is outlined in the following paper: [Training Agents using Upside-Down Reinforcement Learning](https://arxiv.org/pdf/1912.02877.pdf).\n",
+    "\n",
+    "### The Behaviour Function\n",
+    "The behaviour function takes as input the current state and a command, and is trained to output a probability distribution over the actions which lead to that command being fulfilled. The command in this implementation takes the form of two scalars - a desired reward to achieve and a time horizon over which to achieve that desired reward."
    ]
   },
   {
@@ -48,7 +57,7 @@
    "outputs": [],
    "source": [
     "#Visualise agent function\n",
-    "def visualise_agent(policy, command, n=5):\n",
+    "def visualise_agent_command(policy, command, n=5):\n",
     "    try:\n",
     "        for trial_i in range(n):\n",
     "            current_command = deepcopy(command)\n",
@@ -95,7 +104,7 @@
     "        self.command_scale=command_scale\n",
     "        self.observation_embedding = torch.nn.Sequential(\n",
     "            torch.nn.Linear(np.prod(env.observation_space.shape), embedding_size),\n",
-    "            torch.nn.Sigmoid()\n",
+    "            torch.nn.Tanh()\n",
     "        )\n",
     "        self.command_embedding = torch.nn.Sequential(\n",
     "            torch.nn.Linear(2, embedding_size),\n",
