adding policy gradients

--- a/Intro to RL solutions.ipynb
+++ b/Intro to RL solutions.ipynb
@@ -567,7 +567,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the output policy is optimal, but it is not the only optimal policy. For this map it's easy to see that there could be alternatives"
+    "Notice that the output policy is optimal, but it is not the only optimal policy. For this map it's easy to see that there could be alternatives\n",
+    "\n",
+    "## Policy iteration summary\n",
+    "\n",
+    "Here, for the first time, we will summarise some important qualities of an algorithm.\n",
+    "\n",
+    "### Model free or model based?\n",
+    "Policy iteration requires a model of the environment (transition function). Finding the optimal value function is not done by collecting experience (running episodes), it's done by simulating the transitions for all states. To do this simulation, it must require a model, so it's model based.\n",
+    "\n",
+    "### Online or offline?\n",
+    "Improvement is not made whilst the agent is gathering experience. So PI is offline.\n",
+    "\n",
+    "### On policy or off policy?\n",
+    "The updates are computed using the value function for the current policy, so policy iteration is on-policy."
    ]
   },
   {
@@ -678,7 +691,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Value iteration summary\n",
     "\n",
+    "Let's summarise some important qualities of this algorithm.\n",
+    "\n",
+    "### Model free or model based?\n",
+    "Value iteration requires a model of the environment (transition function). Finding the optimal value function is not done by collecting experience (running episodes), it's done by simulating the transitions for all states. To do this simulation, it must require a model, so it's model based.\n",
+    "\n",
+    "### Online or offline?\n",
+    "Improvement is not made whilst the agent is gathering experience; it's all done in simulation. So value iteration is offline.\n",
+    "\n",
+    "### On policy or off policy?\n",
+    "The updates are computed using the value function for the current policy, so value iteration is on-policy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How's value iteration different to policy iteration?\n",
+    "\n",
+    "They are very similar algorithms. In fact, the only difference is that in value iteration there is no distinct difference between the policy evaluation and policy improvement steps. They are both rolled into one process.\n",
+    "Because of this, in value iteration, it's not necessary that we explicitly represent the policy; it emerges by acting greedily with respect to the constantly updating value function.\n",
+    "Combining both policy evaluation and policy improvement into one process is done by updating the value function more frequently than after each complete sweep of the state space.\n",
+    "\n",
+    "Both value iteration and policy iteration are examples of generalised policy improvement (GPI)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Value iteration and policy iteration are types of **value based** method - they use a value or Q function to find an optimal policy."
    ]
   },
