--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -30,9 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-c5be1fa42853>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c5be1fa42853>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    env =     # create the environment\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# IMPORTS\n",
     "import time\n",
