created udrl solutions

--- a/Upside Down RL solution.ipynb
+++ b/Upside Down RL solution.ipynb
@@ -63,25 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v0') #create environment\n",
-    "\n",
-    "i_episode = 0\n",
-    "i_updates = 0 #number of parameter updates to the neural network\n",
-    "replay_buffer = [] #initialize replay buffer\n",
-    "log_to_tensorboard = True \n",
-    "\n",
-    "replay_size = 600 #replay buffer size\n",
-    "last_few = 75 #last_few to use when sampling exploratory commands\n",
-    "batch_size = 32 #batch size when training network\n",
-    "n_warm_up_episodes = 50 #number of warm up episodes\n",
-    "n_episodes_per_iter = 50 #numbers of episodes per iteration of algorithm 1\n",
-    "n_updates_per_iter = 300 #number of gradient updates per iteration of algorithm 1\n",
-    "command_scale = 0.01 #number to multiply command by to scale it down\n",
-    "lr = 0.001 #learning rate for neural network"
+    "env = gym.make('CartPole-v0')"
    ]
   },
   {
@@ -90,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#command takes form [desired return, desired horizon]\n",
+    "#command takes form [derired reward, desired horizon]\n",
     "def random_policy(obs, command):\n",
     "    return np.random.randint(env.action_space.n)"
    ]
@@ -157,27 +143,126 @@
     "        embedding_size=32\n",
     "        self.command_scale=command_scale\n",
     "        self.observation_embedding = torch.nn.Sequential(\n",
-    "            ##linear transformation to embedding_size\n",
-    "            ##tanh activation\n",
+    "            torch.nn.Linear(np.prod(env.observation_space.shape), embedding_size), #linear transformation to embedding_size\n",
+    "            torch.nn.Tanh() #tanh activation\n",
     "        )\n",
     "        self.command_embedding = torch.nn.Sequential(\n",
-    "            ##linear transformation to embedding_size\n",
-    "            ##sigmoid activation\n",
+    "            torch.nn.Linear(2, embedding_size), #linear transformation to embedding_size\n",
+    "            torch.nn.Sigmoid() #sigmoid activation\n",
     "        )\n",
     "        self.to_output = torch.nn.Sequential(\n",
-    "            ##hidden architecture\n",
-    "            ##linear layer to compute output probability logits\n",
+    "            torch.nn.Linear(embedding_size, 64), #hidden architecture\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(64, 64),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(64, env.action_space.n) #linear layer to compute output probability logits\n",
     "        )\n",
     "    \n",
     "    def forward(self, observation, command): #takes in observation and command\n",
-    "        obs_emebdding = ##compute observation embedding\n",
-    "        cmd_embedding = ##computer command embedding\n",
-    "        embedding = ##compute element-wise multiplication of observation and command embedding \n",
-    "        action_prob_logits = ##compute output from embedding\n",
+    "        obs_emebdding = self.observation_embedding(observation) #compute observation embedding\n",
+    "        cmd_embedding = self.command_embedding(command*self.command_scale) #computer command embedding\n",
+    "        embedding = torch.mul(obs_emebdding, cmd_embedding) #compute element-wise multiplication of observation and command embedding \n",
+    "        action_prob_logits = self.to_output(embedding) #compute output from embedding\n",
     "        return action_prob_logits\n",
     "    \n",
     "    def create_optimizer(self, lr):\n",
     "        self.optimizer = torch.optim.Adam(self.parameters(), lr=lr) #create an optimizer object for this network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_command(replay_buffer, last_few):\n",
+    "    if len(replay_buffer)==0:\n",
+    "        return [1, 1]\n",
+    "    else:\n",
+    "        command_samples = replay_buffer[-last_few:] #select the last_few memories\n",
+    "        lengths = [mem['episode_len'] for mem in command_samples] #get lengths of selected episodes\n",
+    "        returns = [mem['return'] for mem in command_samples] #get returns of selected episodes\n",
+    "        mean_return, std_return = np.mean(returns), np.std(returns) #calculate mean and standard deviation of returns\n",
+    "        command_horizon = np.mean(lengths) #calulate mean length of episodes\n",
+    "        desired_return = np.random.uniform(mean_return, mean_return+std_return) #sample desired return from uniform distribution\n",
+    "        return [desired_return, command_horizon]\n",
+    "\n",
+    "#Algorithm 2\n",
+    "def collect_experience(policy, replay_buffer, replay_size, last_few, n_episodes=100, log_to_tensorboard=True):\n",
+    "    global i_episode\n",
+    "    init_replay_buffer = deepcopy(replay_buffer) #make copy of initial replay buffer so we can use it to sample commands\n",
+    "    try:\n",
+    "        for _ in range(n_episodes):\n",
+    "            command = sample_command(init_replay_buffer, last_few) #sample exploratory command\n",
+    "            writer.add_scalar('Command desired return/Episode', command[0], i_episode)    # write desired return to a graph\n",
+    "            writer.add_scalar('Command horizon/Episode', command[1], i_episode)    # write desired horizon to a graph\n",
+    "            observation = env.reset()\n",
+    "            episode_mem = {'observation':[],\n",
+    "                           'action':[],\n",
+    "                           'reward':[]} #initialize episode memory\n",
+    "            done=False\n",
+    "            while not done:\n",
+    "                action = policy(torch.tensor([observation]).double(), torch.tensor([command]).double()) #get action from policy\n",
+    "                new_observation, reward, done, info = env.step(action) #step in environment\n",
+    "                \n",
+    "                #append transition to episode memory\n",
+    "                episode_mem['observation'].append(observation)\n",
+    "                episode_mem['action'].append(action)\n",
+    "                episode_mem['reward'].append(reward)\n",
+    "                \n",
+    "                \n",
+    "                observation=new_observation\n",
+    "                command[0]-= reward #reduce command reward by reward recieved\n",
+    "                command[1] = max(1, command[1]-1) #rewuce command horizon by one as we just took a step\n",
+    "            episode_mem['return']=sum(episode_mem['reward']) #store return for current episode to make sorting easier\n",
+    "            episode_mem['episode_len']=len(episode_mem['observation']) #store length of memory\n",
+    "            replay_buffer.append(episode_mem) #add memory to replay buffer\n",
+    "            i_episode+=1\n",
+    "            if log_to_tensorboard: writer.add_scalar('Return/Episode', sum(episode_mem['reward']), i_episode)    # write loss to a graph\n",
+    "            print(\"Episode {} finished after {} timesteps. Return = {}\".format(i_episode, len(episode_mem['observation']), sum(episode_mem['reward'])))\n",
+    "        env.close()\n",
+    "    except KeyboardInterrupt:\n",
+    "        env.close()\n",
+    "    replay_buffer = sorted(replay_buffer, key=lambda x:x['return'])[-replay_size:] #sort replay_buffer by return and truncate to replay_size\n",
+    "    return replay_buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_net(behaviour_func, replay_buffer, n_updates=100, batch_size=64, log_to_tensorboard=True):\n",
+    "    global i_updates\n",
+    "    all_costs = []\n",
+    "    for i in range(n_updates): #for each update, we need\n",
+    "        batch_observations = np.zeros((batch_size, np.prod(env.observation_space.shape))) #create empty input observations tensor of the correct shape\n",
+    "        batch_commands = np.zeros((batch_size, 2)) #create emply input commands tensor of the correct shape\n",
+    "        batch_label = np.zeros((batch_size)) ##create emply labels tensor of the correct shape\n",
+    "        for b in range(batch_size): #add items to the batch sampled from replay buffer\n",
+    "            sample_episode = np.random.randint(0, len(replay_buffer)) #sample episode index\n",
+    "            sample_t1 = np.random.randint(0, replay_buffer[sample_episode]['episode_len']) #sample t1\n",
+    "            sample_t2 = replay_buffer[sample_episode]['episode_len'] #set t2 = length of the episode\n",
+    "            sample_horizon = sample_t2-sample_t1 #calculate horizon from t1 and t2\n",
+    "            sample_obs = replay_buffer[sample_episode]['observation'][sample_t1] #sample observation\n",
+    "            sample_desired_return = sum(replay_buffer[sample_episode]['reward'][sample_t1:sample_t2]) #sample desired return\n",
+    "            label = replay_buffer[sample_episode]['action'][sample_t1] #get label (action)\n",
+    "            batch_observations[b] = sample_obs #set the bth batch item observation to the sampled observation\n",
+    "            batch_commands[b] = [sample_desired_return, sample_horizon] #set the bth batch item command to the sampled command\n",
+    "            batch_label[b] = label #set the bth batch item label to the sampled label\n",
+    "        batch_observations = torch.tensor(batch_observations).double() #convert sampled batch observation to double tensor\n",
+    "        batch_commands = torch.tensor(batch_commands).double() #convert sampled batch commands to double tensor\n",
+    "        batch_label = torch.tensor(batch_label).long() #convert sampled batch label to long tensor\n",
+    "        pred = behaviour_func(batch_observations, batch_commands) #make prediction over action distribution using behaviour function\n",
+    "        cost = F.cross_entropy(pred, batch_label) #calculate cross entropy loss\n",
+    "        if log_to_tensorboard: writer.add_scalar('Cost/NN update', cost.item() , i_updates)    # write loss to a graph\n",
+    "        all_costs.append(cost.item()) #append current cost to all_costs\n",
+    "        cost.backward() #calculate gradient of cost wrt to weights\n",
+    "        behaviour_func.optimizer.step() #take gradient step to update weights\n",
+    "        behaviour_func.optimizer.zero_grad() #reset stored gradient to zero\n",
+    "        i_updates+=1\n",
+    "    return np.mean(all_costs)"
    ]
   },
   {
@@ -204,10 +289,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "i_episode=0\n",
+    "i_updates=0 #number of parameter updates to the neural network\n",
+    "replay_buffer = [] #initialize replay buffer\n",
+    "log_to_tensorboard = True \n",
+    "\n",
+    "replay_size = 600 #replay buffer size\n",
+    "last_few = 75 #last_few to use when sampling exploratory commands\n",
+    "batch_size = 32 #batch size when training network\n",
+    "n_warm_up_episodes = 50 #number of warm up episodes\n",
+    "n_episodes_per_iter = 50 #numbers of episodes per iteration of algorithm 1\n",
+    "n_updates_per_iter = 300 #number of gradient updates per iteration of algorithm 1\n",
+    "command_scale = 0.01 #number to multiply command by to scale it down\n",
+    "lr = 0.001 #learning rate for neural network\n",
+    "\n",
     "behaviour_func = FCNN_AGENT(command_scale).double() #initialize behaviour function\n",
     "behaviour_func.create_optimizer(lr) #create behaviour function optimizer\n",
     "\n",
@@ -225,98 +324,6 @@
     "# SET UP TRAINING VISUALISATION\n",
     "if log_to_tensorboard: from torch.utils.tensorboard import SummaryWriter\n",
     "if log_to_tensorboard: writer = SummaryWriter() # we will use this to show our models performance on a graph using tensorboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_command(replay_buffer, last_few):\n",
-    "    if len(replay_buffer)==0:\n",
-    "        return [1, 1]\n",
-    "    else:\n",
-    "        command_samples = ##select the last_few memories\n",
-    "        lengths =  ##get lengths of selected episodes\n",
-    "        returns =  ##get returns of selected episodes\n",
-    "        mean_return, std_return = np.mean(returns), np.std(returns) #calculate mean and standard deviation of returns\n",
-    "        command_horizon = np.mean(lengths) #calulate mean length of episodes\n",
-    "        desired_return = np.random.uniform(mean_return, mean_return+std_return) #sample desired return from uniform distribution\n",
-    "        return [desired_return, desired_horizon]\n",
-    "\n",
-    "#Algorithm 2\n",
-    "def collect_experience(policy, replay_buffer, replay_size, last_few, n_episodes=100, log_to_tensorboard=True):\n",
-    "    global i_episode\n",
-    "    init_replay_buffer = deepcopy(replay_buffer) #make copy of initial replay buffer so we can use it to sample commands\n",
-    "    try:\n",
-    "        for _ in range(n_episodes):\n",
-    "            command =  ##sample exploratory command\n",
-    "            writer.add_scalar('Command desired return/Episode', command[0], i_episode)    # write desired return to a graph\n",
-    "            writer.add_scalar('Command horizon/Episode', command[1], i_episode)    # write desired horizon to a graph\n",
-    "            observation = env.reset() #reset environment\n",
-    "            episode_mem = {'observation':[],\n",
-    "                           'action':[],\n",
-    "                           'reward':[]} #initialize episode memory\n",
-    "            done=False\n",
-    "            while not done:\n",
-    "                action = ##get action from policy\n",
-    "                new_observation, reward, done, info = env.step(action) #step in environment\n",
-    "                \n",
-    "                ##append transition (observation, action, reward) to episode memory\n",
-    "                \n",
-    "                observation=new_observation\n",
-    "                command[0]-= ##reduce command reward by reward recieved\n",
-    "                command[1] = ##reduce command horizon by one as we just took a step and ensure > 0\n",
-    "            episode_mem['return']= ##store return for current episode to make sorting easier\n",
-    "            episode_mem['episode_len']= ##store length of memory\n",
-    "            replay_buffer.append(episode_mem) #append memory to replay buffer\n",
-    "            i_episode+=1\n",
-    "            if log_to_tensorboard: writer.add_scalar('Return/Episode', sum(episode_mem['reward']), i_episode)    # write loss to a graph\n",
-    "            print(\"Episode {} finished after {} timesteps. Return = {}\".format(i_episode, len(episode_mem['observation']), sum(episode_mem['reward'])))\n",
-    "        env.close()\n",
-    "    except KeyboardInterrupt:\n",
-    "        env.close()\n",
-    "    replay_buffer = sorted(replay_buffer, key=lambda x:x['return'])[-replay_size:] #sort replay_buffer by return and truncate to replay_size\n",
-    "    return replay_buffer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_net(behaviour_func, replay_buffer, n_updates=100, batch_size=64, log_to_tensorboard=True):\n",
-    "    global i_updates\n",
-    "    all_costs = []\n",
-    "    for i in range(n_updates): #for each update, we need\n",
-    "        batch_observations = ##create empty input observations tensor of the correct shape\n",
-    "        batch_commands = ##create emply input commands tensor of the correct shape\n",
-    "        batch_label = ##create emply labels tensor of the correct shape\n",
-    "        for b in range(batch_size): #add items to the batch sampled from replay buffer\n",
-    "            sample_episode = ##sample episode index\n",
-    "            sample_t1 = ##sample t1\n",
-    "            sample_t2 = ##set t2 = length of the episode\n",
-    "            sample_horizon =  ##calculate horizon from t1 and t2\n",
-    "            sample_obs =  ##sample observation\n",
-    "            sample_desired_return =  ##sample desired return\n",
-    "            label =  ##get label (action)\n",
-    "            batch_observations[b] =  ##set the bth batch item observation to the sampled observation\n",
-    "            batch_commands[b] =  ##set the bth batch item command to the sampled command\n",
-    "            batch_label[b] =  ##set the bth batch item label to the sampled label\n",
-    "        batch_observations = torch.tensor(batch_observations).double() #convert sampled batch observation to double tensor\n",
-    "        batch_commands = torch.tensor(batch_commands).double() #convert sampled batch commands to double tensor\n",
-    "        batch_label = torch.tensor(batch_label).long() #convert sampled batch label to long tensor\n",
-    "        pred = ##make prediction over action distribution using behaviour function\n",
-    "        cost = ##calculate cross entropy loss\n",
-    "        if log_to_tensorboard: writer.add_scalar('Cost/NN update', cost.item() , i_updates)    # write loss to a graph\n",
-    "        all_costs.append(cost.item()) #append current cost to all_costs\n",
-    "        cost.backward() #calculate gradient of cost wrt to weights\n",
-    "        behaviour_func.optimizer.step() #take gradient step to update weights\n",
-    "        behaviour_func.optimizer.zero_grad() #reset stored gradient to zero\n",
-    "        i_updates+=1\n",
-    "    return np.mean(all_costs)"
    ]
   },
   {
@@ -392,8 +399,8 @@
     }
    ],
    "source": [
-    "replay_buffer = ##collect experience from warm up episodes with a random policy\n",
-    "##train the network with the warm up episodes"
+    "replay_buffer = collect_experience(random_policy, replay_buffer, replay_size, last_few, n_warm_up_episodes, log_to_tensorboard)#collect experience from warm up episodes with a random policy\n",
+    "train_net(behaviour_func, replay_buffer, n_updates_per_iter, batch_size, log_to_tensorboard) #train the network with the warm up episodes"
    ]
   },
   {
@@ -404,8 +411,8 @@
    "source": [
     "n_iters=1000 #number of iterations\n",
     "for i in range(n_iters):\n",
-    "    replay_buffer = ##collect expeirence using behaviour function policy\n",
-    "    ##train the network with the collected experience"
+    "    replay_buffer = collect_experience(stochastic_policy, replay_buffer, replay_size, last_few, n_episodes_per_iter, log_to_tensorboard) #collect expeirence using behaviour function policy\n",
+    "    train_net(behaviour_func, replay_buffer, n_updates_per_iter, batch_size, log_to_tensorboard) #train the network with the collected experience"
    ]
   },
   {
