--- a/Q Learning solution.ipynb
+++ b/Q Learning solution.ipynb
@@ -39,6 +39,181 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialise_action_value_table(num_states=16, num_actions=4):\n",
+    "    q_table = {}\n",
+    "    for s in range(num_states):\n",
+    "        q_table[s] = {}\n",
+    "        for a in range(num_actions):\n",
+    "            q_table[s][a] = 0\n",
+    "    return q_table\n",
+    "\n",
+    "def get_state_idx_from_observation(observation):\n",
+    "    return np.argmax(observation[2].reshape(1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = GriddyEnv(4, 4)\n",
+    "epsilon = 1\n",
+    "i_episode=0\n",
+    "discount_factor=0.9\n",
+    "learning_rate=0.3\n",
+    "\n",
+    "def return_optimal_policy_from_q(q_table):\n",
+    "    optimal_policy = {}\n",
+    "    for state, actions in q_table.items():\n",
+    "        optimal_policy[state] = np.argmax(actions.values())\n",
+    "    return optimal_policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_q_table(episode_mem, q_table, discount_factor=0.9, learning_rate=0.1):\n",
+    "    for idx, mem in reversed(list(enumerate(episode_mem))):\n",
+    "        state = get_state_idx_from_observation(mem['observation'])\n",
+    "        new_state = get_state_idx_from_observation(mem['new_observation'])\n",
+    "        action = mem['action']\n",
+    "        if idx == len(episode_mem) - 1: # if terminal state, G=reward\n",
+    "            _return = episode_mem[idx]['reward']\n",
+    "        else:\n",
+    "            _return = mem['reward'] + (discount_factor * _return)\n",
+    "        q_table[state][action] =  q_table[state][action] + learning_rate * (_return - q_table[state][action]) # take exponential average\n",
+    "        q_table[state][action] = np.round(q_table[state][action], 2)\n",
+    "    return q_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MC_policy_evaluation(policy, n_episodes=100):\n",
+    "    q_table = initialise_action_value_table()\n",
+    "    try:\n",
+    "        \n",
+    "        # SAMPLE SOME EPISODES\n",
+    "        for episode_idx in range(n_episodes):\n",
+    "            observation = env.reset()\n",
+    "            episode_mem = []\n",
+    "            done=False\n",
+    "            t = 0\n",
+    "            while not done:\n",
+    "                env.render()\n",
+    "                time.sleep(0.05)\n",
+    "                action = policy(observation)\n",
+    "                new_observation, reward, done, info = env.step(action)\n",
+    "                episode_mem.append({'observation':observation,\n",
+    "                                    'action':action,\n",
+    "                                    'reward':reward,\n",
+    "                                    'new_observation':new_observation,\n",
+    "                                    'done':done})\n",
+    "                observation = new_observation\n",
+    "                t += 1\n",
+    "                \n",
+    "            q_table = update_q_table(episode_mem, q_table, discount_factor, learning_rate) # this is the implicit policy update\n",
+    "            print(\"Episode {} finished after {} timesteps. Eplsilon={}.\".format(episode_idx, t, epsilon))#, end='\\r')\n",
+    "            print('q table:', q_table)\n",
+    "            time.sleep(2)\n",
+    "\n",
+    "\n",
+    "        env.close()\n",
+    "    except KeyboardInterrupt:\n",
+    "        env.close()\n",
+    "        \n",
+    "    return q_table\n",
+    "\n",
+    "MC_policy_evaluation(random_policy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greedy_policy(state, q_table):\n",
+    "    return np.argmax(q_table[state].values()) # return action with best value for this state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greedy_MC_control():\n",
+    "    greedy_policy = policy_map_to_func(q_table)\n",
+    "    while True:\n",
+    "        \n",
+    "        # POLICY EVALUATION\n",
+    "        q_table = MC_policy_evaluation(greedy_policy)\n",
+    "        \n",
+    "        # POLICY IMPROVEMENT\n",
+    "        \n",
+    "        \n",
+    "        # CHECK CONVERGENCE\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why not just act greedily all the time?\n",
+    "\n",
+    "If we act greedily all the time then we will move into the state with the best value. But remember that these values are only estimates based on our agent's experience with the game, which means that they might not be correct. So if we want to make sure that our agent will do well by always choosing the next action greedily, we need to make sure that it has good estimates for the values of those states. This brings us to a core challenge in reinforcement learning: **the exploration vs exploitation dilemma**. Our agent can either exploit what it knows by using it's current knowledge to choose the best action, or it can explore more and improve it's knowledge perhaps learning that some actions are even worse than what it does currently.\n",
+    "\n",
+    "Because we aren't using a model here, we aren't considering all possible actions. Instead we are just acting based on experience. \n",
+    "If we experience a lower return from taking one action in a state rather than another, then we are not going to try the one that gave us the low return again.\n",
+    "This would be more problematic in a stochastic environment - where environment transitions can vary randomly.\n",
+    "When we act greedily we stop exploring, only exploiting the experience we have, even though we might have not experienced the best states.\n",
+    "\n",
+    "## An epsilon-greedy policy\n",
+    "We can combine our random policy and our greedy policy to make an improved policy that both explores its environment and exploits its current knowledge. An $\\epsilon$-greedy (epsilon-greedy) policy is one which exploits what it knows most of the time, but with probability $\\epsilon$ will instead select a random action to try.\n",
+    "\n",
+    "## Do we need to keep exploring once we are confident in the values of states?\n",
+    "\n",
+    "As our agent explores more, it becomes more confident in predicting how valuable any state is. Once it knows a lot, it should start to explore less and exploit what it knows more. That means that we should decrease epsilon over time.\n",
+    "\n",
+    "Let's implement it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def epsilon_greedy_policy(state):\n",
+    "    epsilon = 0.05\n",
+    "    if random.random() < epsilon:\n",
+    "        return random_policy(state)\n",
+    "    else:\n",
+    "        return greedy_policy(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
